# indi-gapers

./: .gitignore  CMakeLists.txt  README.md  indi_gapers.xml.cmake
appunti/: Calcolo correzione moto siderale.ods  TELMOVE.xls
driver/: indi-gapers.cpp  indi-gapers.h
